--- a/Final/bin/.gitignore
+++ b/Final/bin/.gitignore
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-/com/
-=======
 /Fonts/
 /com/
 /map0
@@ -10,6 +7,6 @@
 /map4
 /map5
 /map7
-/spritesheet.png
->>>>>>> 5e7323d28023af8300f214d9bf857b821f5c2af0
+/menu_background.png
 /spritesheet-color.png
+/spritesheet.png
